Fix minor gap issues within header

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 25px;
+    gap: 15px;
 
 }
 
